<resources>
    <string name="app_name">TestingLab</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_logout">Logout</string>
    <string name="menu_welcome">Welcome!</string>
    <string name="menu_text">Menu</string>


</resources>
