
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.uw.tacoma.jwolf059.testinglab.autheticate.LoginFragment">

    <EditText
        android:id="@+id/email_login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu_button" />


</LinearLayout>
